--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "license": "MIT",
   "devDependencies": {
     "dotenv": "^16.0.0",
-    "eslint": "^8.8.0",
     "express": "^4.17.2",
     "fs-extra": "^10.0.0",
     "npm-watch": "^0.11.0",
     "open": "^8.4.0"
+  },
+  "dependencies": {
+    "eslint": "^8.10.0"
   }
 }
